--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pascal Baltazar at 2009-04-15 21:17:29 +0200 
+%% Created for Pascal Baltazar at 2009-04-15 22:28:30 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{digidesignSPG2005,
+	Date-Added = {2009-04-15 21:56:17 +0200},
+	Date-Modified = {2009-04-15 21:57:20 +0200},
+	Keywords = {spatialisation, DAW},
+	Organization = {Digidesign},
+	Title = {Surround Panner Guide for ProTools},
+	Year = {2005}}
 
 @conference{Pottier05,
 	Address = {Paris, France},
