fixing some errors - a \begin{quote} command made the columns  shrink
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5025 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -63,7 +63,8 @@
 
 
 \begin{document}
-%
+%    
+\sloppy
 \maketitle
 %
 
@@ -152,11 +153,11 @@ This section gives an overview of current paradigms and solutions for sound spat
 
 \subsection{digital audio workstations - DAW} \label{sec:digital audio workstations - DAW}  
 
-Currently, many composers and sound-artists use DAWs for designing their sound spatialization, especially for fixed media, tape-music and consumer media production. In these contexts the DAWs generally fullfill the artistic needs of the users in terms of spatialization, along with the fact that they are used to the concept and restrictions of DAWs, and that these offer a good workflow and project management, and are extendable through plug-ins\\
+Currently, many composers and sound-artists use DAWs for designing their sound spatialization, especially for fixed media, tape-music and consumer media production. In these contexts the DAWs generally fulfill the artistic needs of the users in terms of spatialization, along with the fact that they are used to the concept and restrictions of DAWs, and that these offer a good workflow and project management, and are extendable through plug-ins\\
 
 From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. We had to wait until the late nineties to see new suggestions for the surround workstations (from 6.1 to 10.2,  \footnote{a comparative table of DAWs concerning multi-channel audio can be found at \url{http://acousmodules.free.fr/hosts.htm}}), enhancing sides precision and perception outside of the Central Listening Position.\\
-This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral? we mean it influences the user) design, wich cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
-As much as the speaker configuration, another critical fonction for surround sound mixing is the way in which the energy is parsed between the speakers. A ``blur" parameter (often confused with the ``divergence" parametrer control : \quote{which determines the width of the panned signal with respect to neighboring speakers}\cite{digidesignSPG2005})  should be one of the most adjustable, and could appear on every surround panner affected to audio channels. Because it enables many variations and possibilities for a creative mix, and because we would work with this parameter considering the specific features of the sound we have to spatialize. Most of the time, and too restrictively, this factor is associated and linked to the sound source's position to the center in the surround panner, and is related to parameters such as ``spread" or ``diversity" (e.g. in Apple's Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). The most accurate and efficient representation for this parameter is available on Sequoia software \footnote{\url{http://www.magix.com/us/sequoia/}}, with ``soundfield'' offset and character (shape) settings for each track, a global divergence to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. \\
+This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
+As much as the speaker configuration, another critical function for surround sound mixing is the way in which the energy is parsed between the speakers. A ``blur" parameter (often confused with the ``divergence" parameter control : which determines the width of the panned signal with respect to neighboring speakers \cite{digidesignSPG2005})  should be one of the most adjustable, and could appear on every surround panner affected to audio channels. Because it enables many variations and possibilities for a creative mix, and because we would work with this parameter considering the specific features of the sound we have to spatialize. Most of the time, and too restrictively, this factor is associated and linked to the sound source's position to the center in the surround panner, and is related to parameters such as ``spread" or ``diversity" (e.g. in Apple's Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). The most accurate and efficient representation for this parameter is available on Sequoia software \footnote{\url{http://www.magix.com/us/sequoia/}}, with ``soundfield'' offset and character (shape) settings for each track, a global divergence to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. \\
 
 %
 % Did we discuss all point below:? (moved above -> we should use them at the beginning IMHO)
@@ -182,8 +183,8 @@ A traditional workflow in electroacoustic composition or linear sound editing co
 
 \begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion, that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
 By working symbolically during the composition/editing process and separating the authoring from the rendering processes a realization can become portable. A common set of descriptors and shared representation metaphors such as timelines or scene graphs builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the different building blocks.\\
-Modularity is another key point towards this aim, as it allows to separate elements into different layers, according to their function, as describeb in \ref{sec:layers}. It also allows adaptability, through modules querying other modules to adapt themselves to other parts of the graph.\\
-The Tools have to comply to these recommandations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
+Modularity is another key point towards this aim, as it allows to separate elements into different layers, according to their function, as described in \ref{sec:layers}. It also allows adaptability, through modules querying other modules to adapt themselves to other parts of the graph.\\
+The Tools have to comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
@@ -252,20 +253,20 @@ The ICST ambisonics tools comprise a set of four externals for MaxMSP. The two D
 
 Jamoma\footnote{\url{http://www.jamoma.org/}}  is a collaborative set of software tools, including DSP libraries, and a framework for structuring Max/MSP patches.\\
 As a part of the Jamoma library, the DBAP algorithm \cite{dbapICMC09} has been developped as a Max/MSP external. Its major interest consists in how it goes beyond the loudspeakers setup limitation explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, which can be particularly usefull for theatre or installation uses.\\
-One other important part of the Jamoma modular framework\cite{Place:2006jamoma} supplies a set of spatialization tools, as modules wrapping different spatialization algorithms (VBAP FIXME:\cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted one to each other in order to, e.g. quickly compare the adequation of each of them to a specific context. 
+One other important part of the Jamoma modular framework\cite{Place:2006jamoma} supplies a set of spatialization tools, as modules wrapping different spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted one to each other in order to, e.g. quickly compare the adequation of each of them to a specific context. 
 Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxilliaries) are also available in the distribution.
 All these modules have been designed according to the same namespace model, thus allowing the user to seamlessly connect the modules  in minutes and thus experiment ideas presented here, in particular, the actual interoperability of different algorithms, Holo-Edit, Ambimonitor GUI object and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}).\\
-Moreover, an ongoing effort has be done in developping Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, which is a coding layer for the creation of dynamic audio graph topographies, allowing connections carrying multiple channels of audio.\\
+Moreover, an ongoing effort has be done in developing Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, which is a coding layer for the creation of dynamic audio graph topographies, allowing connections carrying multiple channels of audio.\\
 TODO : develop the multicore thingie (Tim)
 
  
 \subsection{Holo-Edit}
-Holo-Edit, initiated by L. Pottier \cite{PottierDAFX98}, is part of the GMEM Holophon project, dedicated to multi-sources and multi-speakers spatialization. This standalone application\cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and reproducting spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including amongst others symmetry, proportion, translation, acceleration, local exaggeration... Different scene representation windows allow the user to view/modify data focusing on different aspects : ``Room" by a top view of the virtual space, ``Time Editor" which is related to the classic automation curve view in DAWs and ``Score" which represent the whole composition in a multi-track block-based view.
+Holo-Edit, initiated by L. Pottier \cite{PottierDAFX98}, is part of the GMEM Holophon project, dedicated to multi-sources and multi-speakers spatialization. This standalone application\cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and reproducting spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including amongst others symmetry, proportion, translation, acceleration, local exaggeration... Different scene representation windows allow the user to view/modify data focusing on different aspects : \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.
 An important feature of Holo-Edit is the ability to represent sound waveforms beside their trajectories. This allows to synchronize sound cues to their associated movements.
-The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods. Even if the model used is a ``virtual space" model [ TODO : ref ?? ], its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).
+The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods. Even if the model used is a virtual acoustic space model [ TODO : ref ?? ], its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).
 Holo-Edit uses OSC for I/O data communication. It has been successfully used with various spatial renderers, written in Max/MSP, Pure Data or SuperCollider, using various algorithms like VBAP, Ambisonics, DBAP. 
 Though, the main drawback of this workflow is the important process of adapting and formating the data to fit the algorithm inputs (e.g. coordinate system, scales, ). 
-A communication interface has then been developped and integrated into the Jamoma environnement. It thus adds the features of playing trajectory compositions according to the edited score and to record them from any real-time control inputs available in Jamoma. 
+A communication interface has then been developed and integrated into the Jamoma environment. It thus adds the features of playing trajectory compositions according to the edited score and to record them from any real-time control inputs available in Jamoma. 
   
 
 
@@ -275,7 +276,7 @@ The method used here tries to define standards through experimental implementati
 
 This collaborative research has emerged from a workshop... we're planning to make more of them
 
-The next step includes developing more usecases and a wider set of tools. SpatDIF and the modular approach to spatialization needs to grow through implementations in a variety of software, especially commercially used systems DAWs and plugins.
+The next step includes developing more use cases and a wider set of tools. SpatDIF and the modular approach to spatialization needs to grow through implementations in a variety of software, especially commercially used systems DAWs and plugins.
 
 
 \section{Conclusion}
