--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -32,8 +32,8 @@
 
 % Title.
 % ------
-\title{a layered approach to sound spatialization - concepts and examples}
-
+%\title{a layered approach to sound spatialization - concepts and examples}
+\title{A stratified approach for sound spatialization}
 % IMPORTANT NOTICE:
 % Reviews are double-blind
 % Authors will not be informed of who reviews their papers, and author names will be concealed from the reviewers 
@@ -75,7 +75,7 @@
 -A layered approach towards interoperability in sound spatialization management\\
 The abstract should be placed at the top left column and should contain
 about 150-200 words.
-
+stratified     strata  stratum 
 KEYWORDS : sound spatialization, interoperability, layered architecture, adaptation, site-specific, Ambisonics
 
 \end{abstract}
@@ -85,24 +85,29 @@ KEYWORDS : sound spatialization, interoperability, layered architecture, adaptat
  
 The goal of each spatialization
 %rendering is it only the rendering system, or control/rendering ?
-system is, simply speaking, to facilitate or even empower the creative use of spatial aspects for the artist. However, quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal across composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
+system is, simply speaking, to facilitate or even empower the creative use of spatial aspects for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal across composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02} %TODO: find a Robert Normandeau reference
-), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). Moreover, different components are in play in the different stages of the creative processes 
-\emph{Experimentation -- Composing -- Performance -- Documentation}, for instance between :
-\begin{packed_item} 
-	\item {real-time or non real-time rendering}  
-%	\item {Plug-In structure: exchangeable renderer and interface components} - this is one of the ideas of the article, we don't need it here
-	\item {multichannel playback and recording possibility} 	
-	\item {binaural rendering for headphone listening}
-	\item {testing technical setup, e.g. loudspeaker connections}   
-	\item {customizable renderer in order to accommodate for different acoustical conditions, e.g. adapting the virtual room description to the listening room} 
-\item {customizable to accommodate for different technical conditions, e.g. rendering to different reproduction formats, compensation for non-ideal loudspeaker configurations, routing signals to dedicated physical outputs}  
-	\item {visual representation of a sound scene} 
-%\item {separate render and control layer} - this is one of the ideas of the article, we don't need it here
-\item {allowing for external control e.g. through MIDI, OSC or other protocols}
+), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
+For instancein a interactive art installation the real-time quality of a spatial rendering system in combination with the possibility to controlled spatial processes through a multi-touch screen of great importance, whereas for a performance of a multichannel fixed-media composition, the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays is paramount. Other requirements may be binaural rendering for headphone listening, multichannel playback and recording possibility, or a visual representation of a sound scene.  
+Moreover, even during the creation of one spatial art work, the importance of these requirements change in the different stages of the creative processes \emph{Experimentation -- Composing -- Performance -- Documentation}. 
 
-\end{packed_item}
-TODO: this list must become better!-please help - \emph{what do we want to say with this list ??} \\
+
+
+
+%\begin{packed_item} 
+%	\item {real-time or non real-time rendering}  
+%%	\item {Plug-In structure: exchangeable renderer and interface components} - this is one of the ideas of the article, we don't need it here
+%	\item {multichannel playback and recording possibility} 	
+%	\item {binaural rendering for headphone listening}
+%	\item {testing technical setup, e.g. loudspeaker connections}   
+%	\item {customizable renderer in order to accommodate for different acoustical conditions, e.g. adapting the virtual room description to the listening room} 
+%\item {customizable to accommodate for different technical conditions, e.g. rendering to different reproduction formats, compensation for non-ideal loudspeaker configurations, routing signals to dedicated physical outputs}  
+%	\item {visual representation of a sound scene} 
+%\item {separate render and control layer} - this is one of the ideas of the article, we don't need it here
+%\item {allowing for external control e.g. through MIDI, OSC or other protocols}
+%
+%\end{packed_item}
+%TODO: this list must become better!-please help - \emph{what do we want to say with this list ??} \\
 
 %The outlined requirements may differ according to artistic paradigms.
 %-Use cases (users : composers, installation artists, scientists...etc...)
@@ -147,18 +152,20 @@ TODO: this list must become better!-please help - \emph{what do we want to say w
 
 %\quote{Very frustrated with my current spatialization software and am desperately looking for something better!}
 
-\section{Review}
-This section gives an overview of current paradigms and solutions for sound spatialization, and shows their limitations. 
-
-
-\subsection{digital audio workstations - DAW} \label{sec:digital audio workstations - DAW}  
-
-Currently, many composers and sound-artists use DAWs for designing their sound spatialization, especially for fixed media, tape-music and consumer media production. In these contexts the DAWs generally fulfill the artistic needs of the users in terms of spatialization, along with the fact that they are used to the concept and restrictions of DAWs, and that these offer a good workflow and project management, and are extendable through plug-ins\\
-
-From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. We had to wait until the late nineties to see new suggestions for the surround workstations (from 6.1 to 10.2,  \footnote{a comparative table of DAWs concerning multi-channel audio can be found at \url{http://acousmodules.free.fr/hosts.htm}}), enhancing sides precision and perception outside of the Central Listening Position.\\
-This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
-As much as the speaker configuration, another critical function for surround sound mixing is the way in which the energy is parsed between the speakers. A ``blur" parameter (often confused with the ``divergence" parameter control : which determines the width of the panned signal with respect to neighboring speakers \cite{digidesignSPG2005})  should be one of the most adjustable, and could appear on every surround panner affected to audio channels. Because it enables many variations and possibilities for a creative mix, and because we would work with this parameter considering the specific features of the sound we have to spatialize. Most of the time, and too restrictively, this factor is associated and linked to the sound source's position to the center in the surround panner, and is related to parameters such as ``spread" or ``diversity" (e.g. in Apple's Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). The most accurate and efficient representation for this parameter is available on Sequoia software \footnote{\url{http://www.magix.com/us/sequoia/}}, with ``soundfield'' offset and character (shape) settings for each track, a global divergence to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. \\
-
+\section{Review of current Paradigms}
+%This section gives an overview of current paradigms and solutions for sound spatialization, and shows their limitations. 
+\subsection{Live sound diffusion}  
+?? shall we mention live diffusion as a paradigm ?
+\subsection{Digital Audio Workstations - DAW} \label{sec:digital audio workstations - DAW} 
+Currently, many composers and sound-artists use DAWs for designing their sound spatialization, primarily in the context of fixed media, tape-music and consumer media production. Users of DAWs have often former experience with live diffusion systems or with panning in a hardware mixing console and their migration to DAWs seems reasonable because the linear time representation of sound material and the audio bus architecture in DAWs originates from the use of multitrack tape recorder and mixing consoles. 
+A lot of (mainly commercial) DAWs are matured and offer a systematic user interface, a good project and sound file management, and an extendability through plug-ins and can fulfill the needs of many users in the described context.\\
+However, through focusing on consumer media products, multichannel capabilities are limited. ITU 5.1, a surround sound format with equidistant loudspeakers around an ideal located listener and originally designed for the requirements of the film industry, is the most common multichannel format in DAWs and in surround panning plugins. More recent, extensions to 7.1 or 10.2 can be found\footnote{A comparison of DAWs concerning their multichannel audio capabilities shows \url{http://acousmodules.free.fr/hosts.htm}.}.   
+Non-commercial loudspeaker setups as they are used in art installations or concert hall environments, varying in number and layout of loudspeakers, are usually not expected -- consequently existing DAW-projects are hard to adapt to this situations. 
+%From 1993, emergence of the ITU 5.1 has been announced as a major improvement for mixing surround sound. Originally designed to fulfill the needs of the film industry, this loudspeaker configuration appeared to music and entertainment companies as a new way to extend their commercial offer. Since then, all DAWs surround panners have been designed to respect and organize sound processing for this set-up. We had to wait until the late nineties to see new suggestions for the surround workstations (from 6.1 to 10.2, , enhancing sides precision and perception outside of the Central Listening Position.\\
+%This was an useful approach for recording, multimedia or film prospects (cannot do business without standards), but still in a regular, circular, geometric and (FIXME: non-neutral ?we mean it influences the user) design, which cannot be acceptable and sufficient for creation or live applications. As an example, a non-flexible loudspeaker circle set-up is very rarely adapted to the concert hall.\\ 
+\\Another critical function for surround sound mixing is how the energy of a sound is mixed between the loudspeakers. A \emph{blur} parameter, which determines the apparent source width of a panned signal should be a standard control element of every surround panner, because it enables many variations and possibilities for a creative mix. %and because we would work with this parameter considering the specific features of the sound we have to spatialize. 
+In most applications, this factor is restricted and linked to the sound source's position to the center in the surround panner, and is related to parameters such as \emph{spread} or \emph{diversity} (e.g. in Apple Logic Pro \footnote{\url{www.apple.com/logicstudio/}}). To the authors opinion, the most flexible control element can be found in Sequoia \footnote{\url{http://www.magix.com/us/sequoia/}}, with \emph{soundfield} offset and character (shape) settings for each track, a \emph{global divergence} to fit to the listening room size, and a complete flexibility for the speaker set-up in the listening area. 
+%
 %
 % Did we discuss all point below:? (moved above -> we should use them at the beginning IMHO)
 %
@@ -170,11 +177,12 @@ As much as the speaker configuration, another critical function for surround sou
 %        c) complicated to maintain automation when changing rendering plugIn
 %        d) burden to connect interfaces (Lemur, Stantum, Wacom, Camera-tracking)
 %        
-%        
-\subsection{Media programming environments}
-Beside the paradigm of the DAW, various media programming environment exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP which are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.  
-However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, enumerable different self-contained libraries and spatialization toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, or Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also frameworks primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
-However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new compositional approaches through combining these tools is difficult or even limited through their specific designs. 
+% 
+      
+\subsection{Media programming environments}  \label{sec:Media programming environments}
+Beside the paradigm of the DAW, various media programming environment exist, such as SuperCollider, Pure Data, Chuck, OpenMusic, or Max/MSP which are capable for spatial sound synthesis. In order to support individual approaches and to meet the specific needs of computer music and mixed media art, these environments enable the user to combine music making with computer programming.\\  
+However, in the name of complete flexibility, these environments lack in providing structured solutions for the specific challenges in spatial music, as outlined in section \ref{sec:introduction}. Consequently, enumerable different self-contained  spatialization libraries and toolboxes were created by artists and researcher, such as the Space Unit Generator \cite{SUG02}, IRCAM's Spatialisateur \cite{JotPhD}, or Virtual Microphone Control \cite{CMJ08-VIMIC} to generate virtual sound sources and artificial spaces. Also toolboxes primarily dedicated to sound diffusion practice, such as the BEASTmulch System\footnote{\url{http://www.beast.bham.ac.uk/research}}, or ICAST \cite{ICAST06} are available.   
+However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new aesthetics through combining these tools is difficult or even limited through their specific designs. 
 %LIMITATIONS OF THESE SOLUTIONS :
 
 \section{Strategies \& Methodologies in Spatial Sound Synthesis}  
@@ -189,7 +197,7 @@ The Tools have to comply to these recommendations, and can be separated in two c
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
 %TROND, J45CH\\
-In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{tab:layer}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}
+In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{tab:layer}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}. TODO: what is OSI, short explanation.
 
 
 
@@ -212,13 +220,13 @@ In order to better grasp the structural and methodological entities used in a sp
 	\begin{tabular}{llll} 
 	Nr. & Layer & Examples&\\
 	\hline
-	5 & controlling the rendering & HoloEdit, ambicontrol,& indirect control description \\ 
+	5. & controlling the rendering & Holo-Edit, ambicontrol,& indirect control description \\ 
 	  &    &  swarm simulator, algorithmic generator & or meta-description\\       %, boids \cite{kimboyle:ssp}
 	\hline
 	4. & audio scene description  & Protocol: SpatDIF core protocol,  & current position of virtual sound sources, \\
 	   &             &    SpatDIF extended if required  & loudspeakers, source width, ...\\
 	\hline
-	3. & encoded audio Protocols & B-format, DIRAC, MPEG-surround & Spatial infomation embedded in format\\
+	3. & encoded audio Protocols & B-format, DIRAC, MPEG-surround & Spatial information embedded in format\\
  	\hline 
 	2. & decoded audio Protocols & CoreAudio, Jack, PortAudio & \\	
 	\hline
@@ -230,7 +238,11 @@ In order to better grasp the structural and methodological entities used in a sp
 		\label{tab:layer}       
 	\end{table*}                          
 
-
+	\begin{figure}
+		[ht] \centerline{
+		\includegraphics[width=1.1\columnwidth]{layers.pdf}} \caption{Layers} \label{fig:layers} 
+	\end{figure}
+	%\end{center}
 
 
 \subsection{SpatDIF}
@@ -252,21 +264,21 @@ The ICST ambisonics tools comprise a set of four externals for MaxMSP. The two D
 \subsection{Jamoma}
 
 Jamoma\footnote{\url{http://www.jamoma.org/}}  is a collaborative set of software tools, including DSP libraries, and a framework for structuring Max/MSP patches.\\
-As a part of the Jamoma library, the DBAP algorithm \cite{dbapICMC09} has been developped as a Max/MSP external. Its major interest consists in how it goes beyond the loudspeakers setup limitation explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, which can be particularly usefull for theatre or installation uses.\\
-One other important part of the Jamoma modular framework\cite{Place:2006jamoma} supplies a set of spatialization tools, as modules wrapping different spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, ambisonics \cite{Schacher:2006ambi_max}, ViMic\cite{CMJ08-VIMIC}) that can be combined and substituted one to each other in order to, e.g. quickly compare the adequation of each of them to a specific context. 
-Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities (loudspeaker setup, FIXME:SPL compensation, FIXME:delay compensation, multichannel meters and auxilliaries) are also available in the distribution.
-All these modules have been designed according to the same namespace model, thus allowing the user to seamlessly connect the modules  in minutes and thus experiment ideas presented here, in particular, the actual interoperability of different algorithms, Holo-Edit, Ambimonitor GUI object and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}).\\
-Moreover, an ongoing effort has be done in developing Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, which is a coding layer for the creation of dynamic audio graph topographies, allowing connections carrying multiple channels of audio.\\
+As a part of the Jamoma library, the DBAP algorithm \cite{dbapICMC09} has been developed as a Max/MSP external. Its major interest consists in how it goes beyond the loudspeakers setup limitation explained in \ref{sec:digital audio workstations - DAW}, based on an ideal model rather than actual positions of loudspeakers in the room, which can be particularly useful for theatre or installation context.\\
+One other important part of the Jamoma modular framework\cite{Place:2006jamoma} supplies a set of spatialization tools, as modules wrapping different spatialization algorithms (VBAP \cite{Pulkki:2000vbap_max}, DBAP \cite{dbapICMC09}, Ambisonics \cite{Schacher:2006ambi_max}, ViMiC\cite{CMJ08-VIMIC}) that can be combined and substituted one to each other in order to, e.g. quickly compare the adequation of each of them to a specific context. 
+Moreover, a number of effect processors (Doppler, Airfilter, RollOff, Reverb) and utilities such as loudspeaker setup including sound pressure and delay compensation for non-equidistant loudspeaker arrangements, multichannel levelmeters and auxiliary sends are also included.
+All these modules have been designed according to the same namespace model, thus allowing the user to seamlessly connect the modules in minutes and thus experiment ideas presented here, in particular, the actual interoperability of different algorithms, Holo-Edit, Ambimonitor GUI object and physical interfaces (i.e. JazzMutant's Lemur \footnote{\url{http://www.jazzmutant.com/}} or TUIO-compliant \cite{kaltenbrunner2005tpt} devices using the Max Multitouch Framework \footnote{\url{http://code.google.com/p/mmf/}}).\\
+Moreover, an ongoing effort has be done in developing Jamoma Multicore \footnote{\url{http://code.google.com/p/jamulticore/}}, a coding layer for the creation of dynamic audio graph topographies, allowing connections carrying multiple channels of audio.\\
 TODO : develop the multicore thingie (Tim)
 
  
 \subsection{Holo-Edit}
-Holo-Edit, initiated by L. Pottier \cite{PottierDAFX98}, is part of the GMEM Holophon project, dedicated to multi-sources and multi-speakers spatialization. This standalone application\cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and reproducting spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including amongst others symmetry, proportion, translation, acceleration, local exaggeration... Different scene representation windows allow the user to view/modify data focusing on different aspects : \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.
+Initiated by L. Pottier \cite{PottierDAFX98}, Holo-Edit is part of the GMEM Holophon project and dedicated to multi-sources and multi-speakers spatialization. This standalone application \cite{Pottier05} is written in Java / OpenGL and uses the timeline paradigm found in traditional DAW for recording, editing, and playback of spatialization control messages. The data is manipulated in the form of trajectories or sequences of time-tagged points in a 3D space. These trajectories can be generated or modified by an expandable set of tools allowing specific spatial and temporal behaviors, including symmetry, proportion, translation, acceleration, local exaggeration and more. Different scene representation windows allow the user to view and modify data focusing on different aspects: \emph{Room} by a top view of the virtual space, \emph{Time Editor} which is related to the classic automation curve view in DAWs and \emph{Score} which represent the whole composition in a multi-track block-based view.
 An important feature of Holo-Edit is the ability to represent sound waveforms beside their trajectories. This allows to synchronize sound cues to their associated movements.
-The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods. Even if the model used is a virtual acoustic space model [ TODO : ref ?? ], its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).
-Holo-Edit uses OSC for I/O data communication. It has been successfully used with various spatial renderers, written in Max/MSP, Pure Data or SuperCollider, using various algorithms like VBAP, Ambisonics, DBAP. 
-Though, the main drawback of this workflow is the important process of adapting and formating the data to fit the algorithm inputs (e.g. coordinate system, scales, ). 
-A communication interface has then been developed and integrated into the Jamoma environment. It thus adds the features of playing trajectory compositions according to the edited score and to record them from any real-time control inputs available in Jamoma. 
+The model of space/time representation has been left intentionally generic, thus it can control a variety of different spatialization methods. Even if Holo-Edit is combined with a auditory virtual environment such as \cite{CMJ08-VIMIC}, its generic nature allows to use it in a more abstract way, thinking more of movements in an arbitrary space ( may it be acoustic, symbolic, semiotic ...).[TODO: I changed something here, but I don't know what you really mean]
+Holo-Edit uses Open Sound Control (OSC) as a communication protocol. It has been successfully used in different media environments as mentioned in section \ref{sec:Media programming environments}  using various spatial renderers, such as VBAP, Ambisonics, or DBAP. 
+In this scenarios, the main challenge is to adapt and format the data stream to fit the specific algorithm syntax (e.g. coordinate system, dimensions, units). 
+Consequently A communication interface has been developed and integrated into Jamoma. It thus adds the features of playing trajectory compositions according to the edited score and to record them from any real-time control inputs available in Jamoma. 
   
 
 
