some more work on the SMC article while waiting for boarding...
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5028 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/SMC2009/smc09.bib
+++ b/Papers/SMC2009/smc09.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Pascal Baltazar at 2009-04-15 22:28:30 +0200 
+%% Created for Pascal Baltazar at 2009-04-16 08:13:41 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -19,19 +19,19 @@
 
 @conference{Pottier05,
 	Address = {Paris, France},
-	Author = {Pottier Laurent and L. Frey},
+	Author = {Laurent Pottier and L. Frey},
 	Booktitle = {Proceedings of the  Journ{\'e}es d'informatique musicale, JIM05},
 	Date-Added = {2009-04-15 13:02:29 -0400},
-	Date-Modified = {2009-04-15 13:06:22 -0400},
+	Date-Modified = {2009-04-16 08:13:31 +0200},
 	Title = {Holo-Edit online : construction d'une application Java sur internet},
 	Year = {2005}}
 
 @conference{PottierDAFX98,
 	Address = {Barcelona, Spain},
-	Author = {Pottier Laurent},
+	Author = {Laurent Pottier},
 	Booktitle = {International Conference on Digital Audio Effects, DAFX98},
 	Date-Added = {2009-04-15 12:56:40 -0400},
-	Date-Modified = {2009-04-15 21:11:06 +0200},
+	Date-Modified = {2009-04-16 08:13:31 +0200},
 	Title = {Dynamical spatialisation of sound. HOLOPHON: a graphical and algorithmical editor for Sigma 1},
 	Year = {1998},
 	Bdsk-Url-1 = {http://www.iua.upf.es/dafx98/papers/POT38.PS}}
