--- a/Papers/SMC2009/Spatialization-SMC09.tex
+++ b/Papers/SMC2009/Spatialization-SMC09.tex
@@ -88,7 +88,7 @@ The goal of each spatialization
 system is, simply speaking, to facilitate or even empower the creative use of spatial medium for the sonic artist. Quantitative studies on spatial music (\cite{otondo2008ctu}, \cite{PetersSurvey}) remind us that there are great individual and context-related differences in defining that goal amongst composers. %that the compositional use of spatialization techniques varies strongly across composers and musical context.    
 For instance, the requirements of a computer aided spatialization system may vary between a fixed-media composition (e.g \cite{BarrettOS02} %TODO: find a Robert Normandeau reference
 ), an art-installation (\cite{lossius:2007sound_space_body}), and a live diffusion performance (\cite{Truax99}). 
-For instance, an interactive art installation where the real-time quality of a spatial rendering system in combination with the possibility to controlled spatial processes through a multi-touch screen is of great importance, whereas for a performance of a multichannel fixed-media composition the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays is paramount. Other requirements may be binaural rendering for headphone listening, multichannel playback and recording, or a visual representation of a sound scene.  
+For instance, an interactive art installation where the real-time quality of a spatial rendering system plays in combination with the possibility to control spatial processes through a multi-touch screen is of great importance, whereas for a performance of a multichannel fixed-media composition the compensation of non-equidistant loudspeaker in terms of sound pressure and time delays is paramount. Other requirements may be binaural rendering for headphone listening, multichannel playback and recording, or a visual representation of a sound scene.  
 Moreover, even during the creation of one spatial art work, the importance of these requirements change at different stages of the creative processes \emph{Experimentation -- Composing -- Performance -- Documentation}. 
 
 
@@ -185,20 +185,19 @@ However, in the name of complete flexibility, these environments lack in providi
 However, each tool may only provide solutions for a subset of compositional viewpoints and the development of new aesthetics through combining these tools is difficult or even limited through their specific designs. 
 %LIMITATIONS OF THESE SOLUTIONS :
 
-\section{Strategies \& Methodologies in Spatial Sound Synthesis}  
+\section{Strategies \& Methodologies in sound spatialization}  
  
-A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of the audio scene. Other contexts such as audio installations or multimedia work imply a different sequence in the steps of the process. The modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layer model doesn't imply a specific method, it much rather tries to emphasize the importance of the interchangeability of modules, which share their interconnecting interfaces. The tools for each layer can be exchanged and compared, without forcing the artist to completely rebuild their setup.
+A traditional workflow in electroacoustic composition or linear sound editing comprises a number of steps leading to the construction of the audio scene. Other contexts such as audio installations or interactive/multimedia work imply a different sequence in the steps of the process. The modular approach tries to abstract these differences and define underlying common elements that are always in play when spatialization is used. This layer model doesn't imply a specific method, it much rather tries to emphasize the importance of the interchangeability of modules, which share their interconnecting interfaces. The tools for each layer can be exchanged and compared, without forcing the artist to completely rebuild their setup.
 
 \begin{quote}Spatial orchestration eases this [...] constraint, [...] the composition may be reconfigured for each individual performance. This will require [...] the composer [to] conceive spatial attributes in a more abstract fashion, that is then instantiated in potentially different ways into different performance environments. \cite{Lyon:2008spatial_orchestration} \end{quote}
 By working symbolically during the composition/editing process and separating the authoring from the rendering processes a realization can become portable. A common set of descriptors and shared representation metaphors such as timelines or scene graphs builds the glue to make a disparate set of tools into a coherent workflow by enhancing interoperability between the different building blocks.\\
 Modularity is another essential tenet.  Modularity allows the separation of elements into different layers according to their function as described in \ref{sec:layers}.  Furthermore, Modularity provides a means by which   modules may query additional modules and then adapt themselves to other parts of the graph.\\
-The Tools must comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
+The Tools used for authoring or rendering must comply to these recommendations, and can be separated in two categories : rendering engines and authoring meta-tools.\\
 
 
 \subsection{A layered approach to the spatialization workflow}\label{sec:layers}
 %TROND, J45CH\\
-In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{tab:layer}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}. TODO: what is OSI, short explanation.
-
+In order to better grasp the structural and methodological entities used in a spatialization process, a layered approach is proposed, which defines the problem domains in an ascending order of abstraction (Table \ref{tab:layer}). This model gets its inspiration from the OSI network model \footnote{\url{http://en.wikipedia.org/wiki/OSI_model}}. OSI (Open Systems Interconnection), is an abstract description for layered communications and computer network protocol design, which divides network architecture into seven layers which range, from top to bottom, between the Application and the Physical Layers
 
 
 %\begin{packed_enumerate}   
@@ -247,7 +246,7 @@ In order to better grasp the structural and methodological entities used in a sp
 
 \subsection{SpatDIF}
 
-The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
+A particular effort has been done by the authors on integrating and developping SpatDIF as Layer 4 (audio scene description). The goal of SpatDIF is to develop a system-independent language for describing spatial audio scenes \cite{Peters:2008spatdif} 
 Formats that integrate spatial audio descriptors such as MPEG-4 Advanced Audio BIFS or OpenAL did not fully succeed in the music or fine arts community because these formats are primary tailored to multimedia and gaming applications and do not necessarily consider the special requirements of spatial music and performances in concert venues or sonic/mixed media installations in specific places such as galleries or museums. Furthermore it is the authors' opinion that artists were not sufficiently involved in the development of these formats.\\
 As can be seen in the layer section (... to be continued ...)
 
@@ -282,6 +281,8 @@ Consequently A communication interface has been developed and integrated into Ja
 
 
 \section{Discussion \& Outlook}
+
+TODO : Here we should maybe emphasize the fact that all these tools do work together and insert a screenshot of a patch demonstrating this (like the one I committed yesterday in UserLib/Holophon/Examples/LemurThingie) - and maybe a graph showing the connections... ???
 
 The method used here tries to define standards through experimental implementation and usage :
 
